-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14, 15
-
Component/s: hotspot
-
b06
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8239483 | 14.0.2 | Roman Kennke | P2 | Resolved | Fixed | b01 |
| JDK-8239938 | 14.0.1 | Roman Kennke | P2 | Resolved | Fixed | b06 |
We're not fixing up all weak roots in final-traversal. But we have to, because weak roots are not scanned+evacuated at init-traversal, and may thus keep dangling pointers that would leak out to the next cycle. This can lead to heap corruption, crashes, etc.
JDK-8230483 is most likely also related to that.
- backported by
-
JDK-8239483 Shenandoah: Fix weak roots in final Traversal GC phase
-
- Resolved
-
-
JDK-8239938 Shenandoah: Fix weak roots in final Traversal GC phase
-
- Resolved
-