8236815: Shenandoah: Fix weak roots in final Traversal GC phase

Reviewed-by: zgu