src/hotspot/share/gc/shenandoah/shenandoahTraversalGC.cpp
@@ -608,8 +608,8 @@ void ShenandoahTraversalGC::final_traversal_collection() {
     _heap->set_concurrent_traversal_in_progress(false);
     _heap->mark_complete_marking_context();
 
-    fixup_roots();
     _heap->parallel_cleaning(false);
+    fixup_roots();
 
     _heap->set_has_forwarded_objects(false);
 
@@ -710,7 +710,8 @@ public:
   void work(uint worker_id) {
     ShenandoahParallelWorkerSession worker_session(worker_id);
     ShenandoahTraversalFixRootsClosure cl;
-    _rp->strong_roots_do(worker_id, &cl);
+    ShenandoahForwardedIsAliveClosure is_alive;
+    _rp->roots_do(worker_id, &is_alive, &cl);
   }
 };
 
